istio/gateway/public-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: grafana
#  namespace: istio-system
#spec:
#  hosts:
#    - "grafana.transparent-sock-shop.de"
#  gateways:
#    - public-gateway.istio-system.svc.cluster.local
#
#  http:
#    - route:
#        - destination:
#            host: flagger-grafana
#
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: kiali
#  namespace: istio-system
#spec:
#  hosts:
#    - "kiali.transparent-sock-shop.de"
#  gateways:
#    - public-gateway.istio-system.svc.cluster.local
#
#  http:
#    - route:
#        - destination:
#            host: kiali.istio-system.svc.cluster.local
#            port:
#              number: 20001
#
#---
#kind: DestinationRule
#apiVersion: networking.istio.io/v1alpha3
#metadata:
#  name: kiali
#  namespace: istio-system
#spec:
#  host: kiali.istio-system.svc.cluster.local
#  trafficPolicy:
#    tls:
#      mode: DISABLE
